--- a/latex/bibttc.bib
+++ b/latex/bibttc.bib
@@ -916,3 +916,14 @@
   year={1998},
   publisher={National Acad Sciences}
 }
+
+@article{wong2005pip2,
+  title={PIP2 hydrolysis and calcium release are required for cytokinesis in Drosophila spermatocytes},
+  author={Wong, Raymond and Hadjiyanni, Irene and Wei, Ho-Chun and Polevoy, Gordon and McBride, Rachel and Sem, Kai-Ping and Brill, Julie A},
+  journal={Current biology},
+  volume={15},
+  number={15},
+  pages={1401--1406},
+  year={2005},
+  publisher={Elsevier}
+}
